CHATS_SIT/force-app/main/default/objects/T_AUTH__c.object
<CustomObject>
    <description>Authorization</description>
    <!--enableChangeDataCapture>false</enableChangeDataCapture-->
    <fields>
        <fullName>AMT_ACTV_AUTH__c</fullName>
        <description>Authorization Activity Amount</description>
        <label>Authorization Activity Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_for_Slots_indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract for Slots Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>	
        <fullName>Do_we_need_to_allow_drop_in_days_for__c</fullName>	
        <defaultValue>false</defaultValue>	
        <label>Do we need to allow drop in days for?</label>	
        <type>Checkbox</type>	
    </fields>	
    <fields>	
        <fullName>Number_of_Drop_in_Days__c</fullName>	
        <label>Number of Drop-in Days</label>	
        <precision>18</precision>	
        <scale>0</scale>	
        <type>Number</type>	
    </fields>
    <fields>
        <fullName>Protective_Services_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Protective Services Indicator</label>
        <type>Checkbox</type>
    </fields> 
    <fields>
        <fullName>AMT_RGSTR_AUTH__c</fullName>
        <description>Authorization Registration Amount</description>
        <label>Authorization Registration Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AMT_TRANSP_AUTH__c</fullName>
        <description>Authorization Transportation Amount</description>
        <label>Authorization Transportation Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batch_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Batch Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDE_COUNTY__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>County</description>
        <label>County</label>
        <referenceTo>T_COUNTY__c</referenceTo>
        <relationshipLabel>T_AUTH</relationshipLabel>
        <relationshipName>T_AUTH</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDE_IMM__c</fullName>
        <label>Immunized</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00389</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_REL_PROVR__c</fullName>
        <description>Provider&apos;s Location/Relative Status</description>
        <label>Provider Location/Relative Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00684</valueSetName>
        </valueSet>
    </fields>
	<fields>
        <fullName>CDE_PROV_DIFF_RESI__c</fullName>
		<label>Provider lives in different residence?</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetName>R00887</valueSetName>
		</valueSet>
    </fields>
	<fields>
        <fullName>CDE_PRO_REL_CHLD__c</fullName>
		<label>Provider Relationship to Child in Care</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetName>R00886</valueSetName>
		</valueSet>
    </fields>
    <fields>
        <fullName>CDE_SOURCE_VRFYD_IMMU__c</fullName>
        <description>Immunization How Verified</description>
        <label>Immunization How Verified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00709</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_TYPE_VERIF__c</fullName>
        <description>Immunization Verified</description>
        <label>Immunization Verified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00367</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Redertimination_Date__c</fullName>
        <formula>IDN_CASE__r.DTE_REDET_CASE__c</formula>
        <label>Case Redetermination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFV_AUTH__c</fullName>
        <description>Authorization Begin Date</description>
        <label>Authorization Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_EFFV_AUTH__c</fullName>
        <label>Authorization End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_CASE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case ID</description>
        <label>Case ID</label>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipLabel>Authorization</relationshipLabel>
        <relationshipName>T_AUTH</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_CLIENT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Client ID</description>
        <label>Client ID</label>
        <referenceTo>T_SBSD_INDIV__c</referenceTo>
        <relationshipLabel>Authorizations</relationshipLabel>
        <relationshipName>T_AUTH</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>individual ID External</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IDN_PROVR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider ID</label>
        <referenceTo>T_CHATS_PROVR_STATUS__c</referenceTo>
        <relationshipLabel>Authorizations</relationshipLabel>
        <relationshipName>Authorizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IND_AUTH_ADDNL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Client has additional authorization(s)</description>
        <label>Client has additional authorization(s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NAM_FACILITY__c</fullName>
        <formula>IDN_PROVR__r.NAM_FACILITY__c</formula>
        <label>Provider Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_FIRST__c</fullName>
        <formula>IDN_CLIENT__r.NAM_FIRST__c</formula>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_LAST__c</fullName>
        <formula>IDN_CLIENT__r.NAM_LAST__c</formula>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Name__c</fullName>
        <formula>IDN_CLIENT__r.NAM_FIRST__c +&apos; &apos;+ IDN_CLIENT__r.NAM_LAST__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorization_Status__c</fullName>
        <label>Authorization Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                    <default>true</default>
                    <label>Authorized</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Terminated</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isFinishedFlow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to check successfully created authorization using flow.</description>
        <label>isFinishedFlow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDE_TRANS_FEE__c</fullName>
        <label>Child Transportation fee:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_YES_NO</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_SLOT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Authorization Slot Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_REMOVAL_SLOT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Authorization Slot Removal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_SLOT_CONTRACT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Slot Contract ID</label>
        <referenceTo>T_SLOT_CONTRACT__c</referenceTo>
        <relationshipLabel>Authorizations</relationshipLabel>
        <relationshipName>Authorizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auth_Reverse_Refer_Track__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auth Reverse Refer Track</label>
        <description>This field is used for marked an authorization that needs to be send in next file to CBMS.</description>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDE_CHILD_ENROLLED_IN_UPK__c</fullName>
        <label>Is this Child dually enrolled in UPK?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00898</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPK_Start_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UPK Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UPK_Awarded_Hours__c</fullName>
        <label>UPK Awarded Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_UPK_Stacked__c</fullName>
        <label>Is UPK Stacked?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPK_Last_Updated_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UPK Last Updated Date</label>
        <type>Date</type>
    </fields>
    <label>Authorization</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CDE_COUNTY__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Authorization ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <!-- Added as part of HF_CHATS_20_09_2018_1 -->
    <validationRules>
        <fullName>Age_Appropriate_Immunization</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT($Permission.System_Administrator ),NOT(CONTAINS( LEFT(  OwnerId , 15) ,LEFT($Label.ByPass_Auth_validation, 15))),ISPICKVAL( CDE_REL_PROVR__c , &apos;1&apos;),OR(ISPICKVAL( CDE_IMM__c , &apos;NMD&apos;),ISPICKVAL( CDE_IMM__c , &apos;NRL&apos;),ISPICKVAL( CDE_IMM__c , &apos;NNW&apos;),ISPICKVAL( CDE_IMM__c , &apos;NW&apos;) ))</errorConditionFormula>
        <errorDisplayField>CDE_IMM__c</errorDisplayField>
        <errorMessage>&apos;Yes. Immunized&apos; value is required for Immunized if Provider Location / Relation to Child is selected as &apos;Out of home non-relative&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BeginDateCannotBeBeforeChildDOB</fullName>
        <active>true</active>
        <description>Authorization Begin Date cannot be before the Child Eligibility Begin date</description>
        <errorConditionFormula>AND(ISNEW(),DTE_BEGIN_EFFV_AUTH__c  &lt;  IDN_CLIENT__r.DTE_DOB__c)</errorConditionFormula>
        <errorDisplayField>DTE_BEGIN_EFFV_AUTH__c</errorDisplayField>
        <errorMessage>Authorization Begin Date cannot be before the Child&apos;s Date of Birth</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BeginDateCannotBeMoreThan4WeeksFuture</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT( ISCHANGED( DTE_BEGIN_SLOT__c ) ) , NOT ( ISCHANGED( IDN_SLOT_CONTRACT__c ) ),NOT($Permission.System_Administrator ),NOT(CONTAINS( LEFT(OwnerId , 15) ,LEFT($Label.ByPass_Auth_validation, 15))), DTE_BEGIN_EFFV_AUTH__c > (TODAY()+VALUE($Label.AllowedDays_Authorization_Begin_Date)))
</errorConditionFormula>
        <errorDisplayField>DTE_BEGIN_EFFV_AUTH__c</errorDisplayField>
        <errorMessage>Authorization Begin Date cannot be more than 60 days into the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Begin_Date_Cannot_Be_Updated</fullName>
        <active>true</active>
        <description>Begin Date Cannot be Updated Once the record has been created</description>
        <errorConditionFormula>ISCHANGED(DTE_BEGIN_EFFV_AUTH__c)</errorConditionFormula>
        <errorDisplayField>DTE_BEGIN_EFFV_AUTH__c</errorDisplayField>
        <errorMessage>Authorization Begin Date Cannot be updated Once the Record has been created</errorMessage>
    </validationRules>
    <!--Commented as part of CCCAP-10798-->
    <!--validationRules>
        <fullName>Begin_Date_Prior_Case_Redeterimnation</fullName>
        <active>false</active>
        <description>Authorization Begin Date cannot be greater than the Case Redetermination Due Date on the case</description>
        <errorConditionFormula>AND(ISNEW(),DTE_BEGIN_EFFV_AUTH__c &gt; Case_Redertimination_Date__c)</errorConditionFormula>
        <errorDisplayField>DTE_BEGIN_EFFV_AUTH__c</errorDisplayField>
        <errorMessage>Authorization Begin Date cannot be greater than the Case Redetermination Due Date on the case</errorMessage>
    </validationRules-->
    <validationRules>
        <fullName>Begin_Date_Prior_To_9_Days</fullName>
        <active>true</active>
        <errorConditionFormula>AND((ISNEW()) ,DTE_BEGIN_EFFV_AUTH__c  &lt; (TODAY()-9))</errorConditionFormula>
        <errorDisplayField>DTE_BEGIN_EFFV_AUTH__c</errorDisplayField>
        <errorMessage>Cannot be prior to {today + 9 days in the past}</errorMessage>
    </validationRules>    
    <validationRules>
        <fullName>Cannot_Update_Client_Or_Case</fullName>
        <active>true</active>
        <errorConditionFormula>AND(!ISNEW(),OR(ISCHANGED(IDN_CLIENT__c),ISCHANGED(IDN_CASE__c)))</errorConditionFormula>
        <errorMessage>Case or Client cannot be updated once the record is created.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Update_Provider</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( IDN_PROVR__c)</errorConditionFormula>
        <errorMessage>Provider Cannot be updated once the record is created</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Not_Allowed_Provider_Location_Relation</fullName>
        <active>true</active>
        <description>CHAT-250 Do not allow user to populate if IDN_PROVR does not belong to a quality exempt provider (EFACH) (T_CHATS_PROVR_STATUS.CDE_TYPE_PROVR = &apos;EFACH&apos; )&quot;</description>
        <errorConditionFormula>AND(NOT($Permission.System_Administrator ),NOT(CONTAINS( LEFT(  OwnerId , 15) ,LEFT($Label.ByPass_Auth_validation, 15))), IF((ISNEW()),AND(NOT(ISPICKVAL(CDE_REL_PROVR__c, &apos;&apos;)), NOT(ISPICKVAL(IDN_PROVR__r.CDE_TYPE_PROVR__c,&apos;EFACH&apos;))),
	AND((ISCHANGED(CDE_REL_PROVR__c)),NOT(ISPICKVAL(CDE_REL_PROVR__c, &apos;&apos;)), NOT(ISPICKVAL(IDN_PROVR__r.CDE_TYPE_PROVR__c,&apos;EFACH&apos;)))))</errorConditionFormula>
        <errorDisplayField>CDE_REL_PROVR__c</errorDisplayField>
        <errorMessage>Not allowed to populate if Provider ID does not belong to a Quality Exempt</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>provr_id_cannot_be_null_insert</fullName>
        <active>true</active>
        <description>check if provider id is passed while creating the new authorization</description>
        <errorConditionFormula>AND(ISNEW(),ISBLANK( IDN_PROVR__c ))</errorConditionFormula>
        <errorMessage>Error occurred while creating the Authorization. Please re-select the Provider ID and try again.</errorMessage>
    </validationRules> 
    <validationRules>
        <fullName>Req_Provider_Location_Relation</fullName>
        <active>true</active>
        <description>CHAT-250 Required if IDN_PROVR belongs to a quality exempt provider (EFACH) (T_CHATS_PROVR_STATUS.CDE_TYPE_PROVR = &apos;EFACH&apos; )</description>
        <errorConditionFormula>AND(NOT($Permission.System_Administrator),NOT(CONTAINS( LEFT(  OwnerId , 15) ,LEFT($Label.ByPass_Auth_validation, 15))), ISPICKVAL(CDE_REL_PROVR__c, &apos;&apos;),  ISPICKVAL(IDN_PROVR__r.CDE_TYPE_PROVR__c,&apos;EFACH&apos;) )</errorConditionFormula>
        <errorDisplayField>CDE_REL_PROVR__c</errorDisplayField>
        <errorMessage>Required if Provider ID belongs to a Quality Exempt</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Immunization_How_Verified</fullName>
        <active>true</active>
        <description>Immunization How verified is required if Immunization How Verified is Written Verification.</description>
        <errorConditionFormula>AND(NOT($Permission.System_Administrator),NOT(CONTAINS( LEFT(  OwnerId , 15) ,LEFT($Label.ByPass_Auth_validation, 15))), ISPICKVAL(CDE_TYPE_VERIF__c , &apos;V&apos; ), ISBLANK(TEXT(CDE_SOURCE_VRFYD_IMMU__c)))</errorConditionFormula>
        <errorDisplayField>CDE_SOURCE_VRFYD_IMMU__c</errorDisplayField>
        <errorMessage>Immunization How verified is required if Immunization How Verified is Written Verification</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Immunization_Verified</fullName>
        <active>true</active>
        <description>CHAT-245:  Immunization Verified T_AUTH CDE_TYPE_VERIF Y Required if CDE_IMM is not blank</description>
        <errorConditionFormula>AND(NOT($Permission.System_Administrator),NOT(CONTAINS( LEFT(  OwnerId , 15) ,LEFT($Label.ByPass_Auth_validation, 15))), !ISBLANK(TEXT( CDE_IMM__c )), ISBLANK(TEXT( CDE_TYPE_VERIF__c )))</errorConditionFormula>
        <errorDisplayField>CDE_TYPE_VERIF__c</errorDisplayField>
        <errorMessage>Immunization Verified is Required when Immunized is not blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Immunized</fullName>
        <active>true</active>
        <description>CHAT-245: Immunized T_AUTH CDE_IMM Y Required if CDE_REL_PROVR is &apos;Out of Home, Non-Relative&apos;</description>
        <errorConditionFormula>AND(NOT($Permission.System_Administrator),NOT(CONTAINS( LEFT(  OwnerId , 15) ,LEFT($Label.ByPass_Auth_validation, 15))), ISBLANK(TEXT( CDE_IMM__c )) ,  ISPICKVAL( CDE_REL_PROVR__c , &apos;1&apos;) )</errorConditionFormula>
        <errorMessage>A value is required for Immunized if Provider Location / Relation to Child is selected as &apos;Out of home non-relative&apos;</errorMessage>
    </validationRules>
	<validationRules>
		<fullName>Req_Rel_Child_In_Care</fullName>
		<active>true</active>
		<description>CCCAP-12773 : Field is required if the ‘Provider Location/Relative Status’ is Out of Home Relative or In-Home Relative.</description>
		<errorConditionFormula>AND(NOT($Permission.System_Administrator),NOT(CONTAINS( LEFT( OwnerId , 15) ,LEFT($Label.ByPass_Auth_validation, 15))), OR(ISPICKVAL(CDE_REL_PROVR__c, &apos;2&apos;), ISPICKVAL(CDE_REL_PROVR__c, &apos;4&apos;)),ISPICKVAL(CDE_PRO_REL_CHLD__c, &apos;&apos;))</errorConditionFormula>
		<errorDisplayField>CDE_PRO_REL_CHLD__c</errorDisplayField>
		<errorMessage>Required if ‘Provider Location/Relative Status’ is Out of Home Relative or In-Home Relative.</errorMessage>
	</validationRules>
	<validationRules>
		<fullName>Req_Prov_In_Diff_Residence</fullName>
		<active>true</active>
		<description>CCCAP-12773 : Required field if the Provider Relationship to Child in Care is Brother or Sister</description>
		<errorConditionFormula>AND(NOT($Permission.System_Administrator),NOT(CONTAINS( LEFT( OwnerId , 15) ,LEFT($Label.ByPass_Auth_validation, 15))), OR(ISPICKVAL(CDE_PRO_REL_CHLD__c, &apos;B&apos;), ISPICKVAL(CDE_PRO_REL_CHLD__c, &apos;S&apos;)),ISPICKVAL(CDE_PROV_DIFF_RESI__c, &apos;&apos;))</errorConditionFormula>
		<errorDisplayField>CDE_PROV_DIFF_RESI__c</errorDisplayField>
		<errorMessage>Required if the &quot;Provider Relationship to Child in Care&quot; is Brother or Sister</errorMessage>
	</validationRules>
</CustomObject>