CHATS_SIT/force-app/main/default/objects/T_AUTH__c/fields/CDE_PROV_DIFF_RES__c.field-meta.xml
<CustomField>
    <fullName>CDE_PROV_DIFF_RES__c</fullName>
    <label>Provider lives in different residence?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RT_YES_NO</valueSetName>
    </valueSet>
</CustomField>