CHATS_SIT/force-app/main/default/objects/T_AUTH__c/fields/Child_Enrollment_Datafix_Flag__c.field-meta.xml
<CustomField>
    <fullName>Child_Enrollment_Datafix_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporary flag created to identify the Auth&apos;s that need to be Datafixed</description>
    <label>Child Enrollment Datafix Flag</label>
    <type>Checkbox</type>
</CustomField>