CHATS_SIT/force-app/main/default/objects/T_AUTH__c/validationRules/Age_Appropriate_Immunization.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_Appropriate_Immunization</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT($Permission.System_Administrator ),NOT(CONTAINS( LEFT(  OwnerId , 15) ,LEFT($Label.ByPass_Auth_validation, 15))),ISPICKVAL( CDE_REL_PROVR__c , &apos;1&apos;),OR(ISPICKVAL( CDE_IMM__c , &apos;NMD&apos;),ISPICKVAL( CDE_IMM__c , &apos;NRL&apos;),ISPICKVAL( CDE_IMM__c , &apos;NNW&apos;),ISPICKVAL( CDE_IMM__c , &apos;NW&apos;) ))</errorConditionFormula>
    <errorDisplayField>CDE_IMM__c</errorDisplayField>
    <errorMessage>&apos;Yes. Immunized&apos; value is required for Immunized if Provider Location / Relation to Child is selected as &apos;Out of home non-relative&apos;</errorMessage>
</ValidationRule>