CHATS_SIT/force-app/main/default/objects/T_AUTH__c/validationRules/Begin_Date_Cannot_Be_Updated.validationRule-meta.xml
<ValidationRule>
    <fullName>Begin_Date_Cannot_Be_Updated</fullName>
    <active>true</active>
    <description>Begin Date Cannot be Updated Once the record has been created</description>
    <errorConditionFormula>ISCHANGED(DTE_BEGIN_EFFV_AUTH__c)</errorConditionFormula>
    <errorDisplayField>DTE_BEGIN_EFFV_AUTH__c</errorDisplayField>
    <errorMessage>Authorization Begin Date Cannot be updated Once the Record has been created</errorMessage>
</ValidationRule>