CHATS_SIT/force-app/main/default/objects/T_AUTH__c/validationRules/Begin_Date_Prior_To_9_Days.validationRule-meta.xml
<ValidationRule>
    <fullName>Begin_Date_Prior_To_9_Days</fullName>
    <active>true</active>
    <errorConditionFormula>AND((ISNEW()) ,DTE_BEGIN_EFFV_AUTH__c  &lt; (TODAY()-9))</errorConditionFormula>
    <errorDisplayField>DTE_BEGIN_EFFV_AUTH__c</errorDisplayField>
    <errorMessage>Cannot be prior to {today + 9 days in the past}</errorMessage>
</ValidationRule>