CHATS_SIT/force-app/main/default/objects/T_AUTH__c/validationRules/BeginDateCannotBeBeforeChildDOB.validationRule-meta.xml
<ValidationRule>
    <fullName>BeginDateCannotBeBeforeChildDOB</fullName>
    <active>true</active>
    <description>Authorization Begin Date cannot be before the Child Eligibility Begin date</description>
    <errorConditionFormula>AND(ISNEW(),DTE_BEGIN_EFFV_AUTH__c  &lt;  IDN_CLIENT__r.DTE_DOB__c)</errorConditionFormula>
    <errorDisplayField>DTE_BEGIN_EFFV_AUTH__c</errorDisplayField>
    <errorMessage>Authorization Begin Date cannot be before the Child&apos;s Date of Birth</errorMessage>
</ValidationRule>