CHATS_SIT/force-app/main/default/objects/T_AUTH__c/validationRules/Cannot_Update_Client_Or_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Update_Client_Or_Case</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!ISNEW(),OR(ISCHANGED(IDN_CLIENT__c),ISCHANGED(IDN_CASE__c)))</errorConditionFormula>
    <errorMessage>Case or Client cannot be updated once the record is created.</errorMessage>
</ValidationRule>