CHATS_SIT/force-app/main/default/objects/T_AUTH__c/validationRules/Cannot_Update_Provider.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Update_Provider</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( IDN_PROVR__c)</errorConditionFormula>
    <errorMessage>Provider Cannot be updated once the record is created</errorMessage>
</ValidationRule>