CHATS_SIT/force-app/main/default/objects/T_AUTH__c/validationRules/Not_Allowed_Provider_Location_Relation.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Allowed_Provider_Location_Relation</fullName>
    <active>true</active>
    <description>CHAT-250 Do not allow user to populate if IDN_PROVR does not belong to a quality exempt provider (EFACH) (T_CHATS_PROVR_STATUS.CDE_TYPE_PROVR = &apos;EFACH&apos; )&quot;</description>
    <errorConditionFormula>AND(NOT($Permission.System_Administrator ),NOT(CONTAINS( LEFT(  OwnerId , 15) ,LEFT($Label.ByPass_Auth_validation, 15))), IF((ISNEW()),AND(NOT(ISPICKVAL(CDE_REL_PROVR__c, &apos;&apos;)), NOT(ISPICKVAL(IDN_PROVR__r.CDE_TYPE_PROVR__c,&apos;EFACH&apos;))),
	AND((ISCHANGED(CDE_REL_PROVR__c)),NOT(ISPICKVAL(CDE_REL_PROVR__c, &apos;&apos;)), NOT(ISPICKVAL(IDN_PROVR__r.CDE_TYPE_PROVR__c,&apos;EFACH&apos;)))))</errorConditionFormula>
    <errorDisplayField>CDE_REL_PROVR__c</errorDisplayField>
    <errorMessage>Not allowed to populate if Provider ID does not belong to a Quality Exempt</errorMessage>
</ValidationRule>