CHATS_SIT/force-app/main/default/objects/T_AUTH__c/validationRules/provr_id_cannot_be_null_insert.validationRule-meta.xml
<ValidationRule>
    <fullName>provr_id_cannot_be_null_insert</fullName>
    <active>true</active>
    <description>check if provider id is passed while creating the new authorization</description>
    <errorConditionFormula>AND(ISNEW(),ISBLANK( IDN_PROVR__c ))</errorConditionFormula>
    <errorMessage>Error occurred while creating the Authorization. Please re-select the Provider ID and try again.</errorMessage>
</ValidationRule>