CHATS_SIT/force-app/main/default/objects/T_AUTH__c/validationRules/Req_Prov_In_Diff_Residence.validationRule-meta.xml
<ValidationRule>
    <fullName>Req_Prov_In_Diff_Residence</fullName>
    <active>true</active>
    <description>CCCAP-12773 : Required field if the Provider Relationship to Child in Care is Brother or Sister</description>
    <errorConditionFormula>AND(NOT($Permission.System_Administrator),NOT(CONTAINS( LEFT( OwnerId , 15) ,LEFT($Label.ByPass_Auth_validation, 15))), OR(ISPICKVAL(CDE_PRO_REL_CHLD__c, &apos;B&apos;), ISPICKVAL(CDE_PRO_REL_CHLD__c, &apos;S&apos;)),ISPICKVAL(CDE_PROV_DIFF_RESI__c, &apos;&apos;))</errorConditionFormula>
    <errorDisplayField>CDE_PROV_DIFF_RESI__c</errorDisplayField>
    <errorMessage>Required if the &quot;Provider Relationship to Child in Care&quot; is Brother or Sister</errorMessage>
</ValidationRule>