CHATS_SIT/force-app/main/default/objects/T_AUTH__c/validationRules/Req_Provider_Location_Relation.validationRule-meta.xml
<ValidationRule>
    <fullName>Req_Provider_Location_Relation</fullName>
    <active>true</active>
    <description>CHAT-250 Required if IDN_PROVR belongs to a quality exempt provider (EFACH) (T_CHATS_PROVR_STATUS.CDE_TYPE_PROVR = &apos;EFACH&apos; )</description>
    <errorConditionFormula>AND(NOT($Permission.System_Administrator),NOT(CONTAINS( LEFT(  OwnerId , 15) ,LEFT($Label.ByPass_Auth_validation, 15))), ISPICKVAL(CDE_REL_PROVR__c, &apos;&apos;),  ISPICKVAL(IDN_PROVR__r.CDE_TYPE_PROVR__c,&apos;EFACH&apos;) )</errorConditionFormula>
    <errorDisplayField>CDE_REL_PROVR__c</errorDisplayField>
    <errorMessage>Required if Provider ID belongs to a Quality Exempt</errorMessage>
</ValidationRule>