CHATS_SIT/force-app/main/default/objects/T_AUTH__c/validationRules/Required_Immunization_How_Verified.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Immunization_How_Verified</fullName>
    <active>true</active>
    <description>Immunization How verified is required if Immunization How Verified is Written Verification.</description>
    <errorConditionFormula>AND(NOT($Permission.System_Administrator),NOT(CONTAINS( LEFT(  OwnerId , 15) ,LEFT($Label.ByPass_Auth_validation, 15))), ISPICKVAL(CDE_TYPE_VERIF__c , &apos;V&apos; ), ISBLANK(TEXT(CDE_SOURCE_VRFYD_IMMU__c)))</errorConditionFormula>
    <errorDisplayField>CDE_SOURCE_VRFYD_IMMU__c</errorDisplayField>
    <errorMessage>Immunization How verified is required if Immunization How Verified is Written Verification</errorMessage>
</ValidationRule>