CHATS_SIT/force-app/main/default/objects/T_AUTH__c/validationRules/Required_Immunization_Verified.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Immunization_Verified</fullName>
    <active>true</active>
    <description>CHAT-245:  Immunization Verified T_AUTH CDE_TYPE_VERIF Y Required if CDE_IMM is not blank</description>
    <errorConditionFormula>AND(NOT($Permission.System_Administrator),NOT(CONTAINS( LEFT(  OwnerId , 15) ,LEFT($Label.ByPass_Auth_validation, 15))), !ISBLANK(TEXT( CDE_IMM__c )), ISBLANK(TEXT( CDE_TYPE_VERIF__c )))</errorConditionFormula>
    <errorDisplayField>CDE_TYPE_VERIF__c</errorDisplayField>
    <errorMessage>Immunization Verified is Required when Immunized is not blank</errorMessage>
</ValidationRule>