CHATS_SIT/force-app/main/default/objects/T_AUTH__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>DTE_BEGIN_EFFV_AUTH__c</columns>
    <columns>DTE_END_EFFV_AUTH__c</columns>
    <columns>Authorization_Status__c</columns>
    <columns>CDE_CHILD_ENROLLED_IN_UPK__c</columns>
    <columns>Is_UPK_Stacked__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>